@@ -1,5 +1,5 @@
 <metadata>
-  <version>2602</version>
+  <version>3300</version>
   <dependencies>
     <dependency>profile-plone.app.dexterity:default</dependency>
     <dependency>profile-plone.app.registry:default</dependency>
